# unixdmoain

./: .gitignore  LICENSE.TXT  Makefile.am  README.md  configure.ac
admin/: AFS_remove_orphaned_userhomes.py  AFS_sync_launcher.sh  AFS_sync_logviewer.sh  AFS_sync_unibasUser.py  Makefile.am  add_domad.py  add_domain.py  cronjob.sh  delete_domad.py  delete_host.py  find_expired.py  fix_expire.py  idscanner.py  janitor.py  list_domad.py  list_domains.py  start_queuescanner.sh  sync_AFS_cronjob.sh  sync_localHome.py
etc/: Makefile.am  ud2.conf  ud2_apache.conf  www_conf.xml
lib/: Classes.py  Makefile.am  __init__.py  dbmcache.py  functions.py  udPolicyEngine.py
lib/afslib/: Makefile.am  README  afslib.py  urenew.py
lib/ldif/: 63-ud.ldif  init_domain._EXAMPLE_.ldif  ldapmodify_example
lib/plugins/: Makefile.am  __init__.py  krb5.py  krb5_apache.py  krb5_keytab.py  krb5_login.py  ldapdb.py  ldapdbadmin.py
lib/test/: Classes.py  __init__.py  db.py  dbmcache.py  krb5.py  testconf.xml
lib/udPolicy/: Makefile.am  cfPolicy.py  groupPolicy.py  groupPolicy_FreeBSD.py  groupPolicy_Linux.py  localHomePolicy.py  sudoPolicy.py  sudoPolicy_Ubuntu.py  sudoPolicy_debian.py  udPolicy.py  updateDbPolicy.py  userPolicy.py  userPolicy_FreeBSD.py  userPolicy_Linux.py  userPolicy_Ubuntu.py  userPolicy_debian.py
sbin/: Makefile.am  add_host.py  cfsync.py  hostedit.py  hostreg.py  hostrun.py  list_hosts.py  nfs_setup.py  register.sh
share/: Makefile.am
wwwlib/: Makefile.am  childs.wsgi  fail2ban.py  functions.py  groups.wsgi  home.wsgi  node.wsgi  policy.py  rest.py  users.wsgi
(+37 files in other folders)
